<resources>
    <string name="app_name">SabdroidEx</string>
    <string name="new_version">New Version Info</string>
    <string name="header_speed">Speed </string>
    <string name="header_time_left">Time Left </string>
    <string name="header_free">Free </string>
    <string name="header_queue">Queue </string>
    <string name="header_speed_unit">KB/s</string>
    <string name="header_free_unit">GB</string>
    <string name="header_speed_format">--- KB/s</string>
    <string name="header_time_left_format">--:--:--</string>
    <string name="header_free_format">-- GB</string>
    <string name="header_queue_format">--- / ---</string>
    <string name="mb">MB</string>
    <string name="days">days</string>
    <string name="separator"> : </string>
    <string name="setting_empty">The settings are being retrieved</string>
    <string name="setting_cannot_retrieve">Cannot retrieve settings</string>
    <string name="setting_auth">Authentification</string>
    <string name="setting_auth_username">Username</string>
    <string name="setting_auth_password">Password</string>
    <string name="setting_header_server">Sabnzbd+ settings</string>
    <string name="setting_sabnzbd_url">Server URL</string>
    <string name="setting_sabnzbd_url_summary">The SABnzbd server address</string>
    <string name="setting_sabnzbd_port">Server Port</string>
    <string name="setting_sabnzbd_port_summary">The SABnzbd server port</string>
    <string name="setting_sabnzbd_url_extention">Server URL Extension</string>
    <string name="setting_sabnzbd_url_extention_summary">Extension of the server URL for Sabnzbd</string>
    <string name="setting_sabnzbd_ssl">Use SSL/HTTPS</string>
    <string name="setting_sabnzbd_ssl_summary">Use a secure connection to connect to SABnzbd</string>
    <string name="setting_sabnzbd_refresh_rate">Refresh Rate in milliseconds</string>
    <string name="setting_sabnzbd_refresh_rate_summary">Time between each refresh</string>
    <string name="setting_sabnzbd_api_key">Your SABnzbd API key</string>
    <string name="setting_sabnzbd_bandwidth_limit">Bandwidth Limit</string>
    <string name="setting_sabnzbd_bandwidth_limit_summary">Set the max bandwidth for Sabnzbd</string>
    <string name="setting_sabnzbd_cache_dir">Cache Directory</string>
    <string name="setting_sabnzbd_cache_dir_summary">Set the cache directory for Sabnzbd</string>
    <string name="setting_sabnzbd_cache_limit">Cache Limit</string>
    <string name="setting_sabnzbd_cache_limit_summary">Set the cache size limit for Sabnzbd</string>
    <string name="setting_sabnzbd_dirscan_dir">Dirscan Directory</string>
    <string name="setting_sabnzbd_dirscan_dir_summary">Set the directory Sabnzbd will scan for Nzbs</string>
    <string name="setting_sabnzbd_dirscan_speed">Dirscan Speed</string>
    <string name="setting_sabnzbd_dirscan_speed_summary">Set the interval for Sabnzbd to scan for Nzbs</string>
    <string name="setting_sabnzbd_download_dir">Download Directory</string>
    <string name="setting_sabnzbd_download_dir_summary">Set the directory in which Sabnzbd will download</string>
    <string name="setting_sabnzbd_complete_dir">Complete Directory</string>
    <string name="setting_sabnzbd_complete_dir_summary">Set the directory in which Sabnzbd will move completed downloads</string>
    <string name="setting_header_sickbeard">Sickbeard settings</string>
    <string name="setting_sickbeard">Use Sickbeard</string>
    <string name="setting_sickbeard_url">Server URL</string>
    <string name="setting_sickbeard_url_summary">The Sickbeard server address</string>
    <string name="setting_sickbeard_port">Server Port</string>
    <string name="setting_sickbeard_port_summary">The Sickbeard server port</string>
    <string name="setting_sickbeard_url_extention">Server URL Extension</string>
    <string name="setting_sickbeard_url_extention_summary">Extension of the server URL for Sickbeard</string>
    <string name="setting_sickbeard_ssl">Use SSL/HTTPS to connect to Sickbeard</string>
    <string name="setting_sickbeard_ssl_summary">Use a secure connection to connect to Sickbeard</string>
    <string name="setting_sickbeard_refresh_rate">Refresh Rate in milliseconds</string>
    <string name="setting_sickbeard_refresh_rate_summary">Time between each refresh</string>
    <string name="setting_sickbeard_api_key">Your Sickbeard API key</string>
    <string name="setting_header_couchpotato">Couchpotato settings</string>
    <string name="setting_couchpotato">Use CouchPotato</string>
    <string name="setting_couchpotato_url">Server URL</string>
    <string name="setting_couchpotato_url_summary">The CouchPotato server address</string>
    <string name="setting_couchpotato_port">Server port</string>
    <string name="setting_couchpotato_port_summary">The CouchPotato server port</string>
    <string name="setting_couchpotato_url_extention">Server URl extension</string>
    <string name="setting_couchpotato_profile">CouchPotato Profile</string>
    <string name="setting_couchpotato_profile_summary">Select CouchPotato profile for download</string>
    <string name="setting_couchpotato_url_extention_summary">Extension of the server URL of CouchPotato</string>
    <string name="setting_couchpotato_ssl">Use SSL/HTTPS to connect to CouchPotato</string>
    <string name="setting_couchpotato_ssl_summary">Use a secure connection to connect to CouchPotato</string>
    <string name="setting_couchpotato_api_key">Your Couchpotato API key</string>
    <string name="setting_couchpotato_auth">Authentification</string>
    <string name="setting_couchpotato_auth_username">Username</string>
    <string name="setting_couchpotato_auth_password">Password</string>
    <string name="setting_header_apache">Apache settings</string>
    <string name="setting_apache">HTTP Authentication</string>
    <string name="setting_apache_username">Username</string>
    <string name="setting_apache_password">Password</string>
    <string name="setting_apache_summary">Using HTTP authentication</string>
    <string name="setting_nzbs_org_auth">NZBS.org Identification</string>
    <string name="setting_nzbs_org_uid">NZBS.org UID</string>
    <string name="setting_nzbs_org_uid_summary">The UID linked to you NZBS.org account</string>
    <string name="setting_nzbs_org_hash">NZBS.org Hash</string>
    <string name="setting_nzbs_org_hash_summary">The Hash linked to you NZBS.org account</string>
    <string name="setting_header_global">Global settings</string>
    <string name="setting_data_cache">Enable data cache</string>
    <string name="setting_data_cache_summary">Allows to keep the content of the tabs even if being offline</string>
    <string name="setting_data_image_cache">Image Cache</string>
    <string name="setting_data_image_cache_summary">Use local cache for Images</string>
    <string name="setting_data_image_lowres">Lowres Images</string>
    <string name="setting_data_image_lowres_summary">Use low resolution Images</string>
    <string name="setting_data_nomedia">.Nomedia</string>
    <string name="setting_data_nomedia_summary">Prevents Images to be displayed in the Gallery</string>
    <string name="setting_search_servers">Configure search providers</string>
    <string name="setting_search_servers_summary">Add, change, delete search providers</string>
    <string name="setting_newznab_url">NewzNab server URL</string>
    <string name="setting_newznab_url_summary">The NewzNab server address</string>
    <string name="setting_newznab_api_key">NewzNab server api key</string>
    <string name="setting_backup">Backup</string>
    <string name="setting_backup_save">Save settings backup</string>
    <string name="setting_backup_restore">Restore settings backup</string>
    <string name="setting_backup_done">Settings backup done</string>
    <string name="setting_backup_restored">Settings backup restored</string>
    <string name="menu_play">Play</string>
    <string name="menu_pause">Pause</string>
    <string name="menu_resume">Resume</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_add">Add</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_server_settings">Server Settings</string>
    <string name="menu_couch_settings">Couchpotato Settings</string>
    <string name="menu_quit">Quit</string>
    <string name="menu_back">Back</string>
    <string name="menu_search">Search</string>
    <string name="menu_delete">Delete</string>
    <string name="queue_item_edit">Edit</string>
    <string name="tab_history">History</string>
    <string name="tab_queue">Queue</string>
    <string name="tab_search">Search</string>
    <string name="tab_shows">Shows</string>
    <string name="tab_coming">Coming</string>
    <string name="tab_movies">Movies</string>
    <string name="adapter_done">Done</string>
    <string name="no_poster">No poster found</string>
    <string name="show_banner">Banner</string>
    <string name="show_poster">Poster</string>
    <string name="show_name">Name : </string>
    <string name="show_status">Status : </string>
    <string name="show_quality">Quality : </string>
    <string name="show_network">Network : </string>
    <string name="show_next_episode">Next Episode : </string>
    <string name="show_language">Language : </string>
    <string name="show_season">Season</string>
    <string name="show_specials">Specials</string>
    <string name="episode">Episode : </string>
    <string name="episode_name">Episode name : </string>
    <string name="episode_airdate">Air date : </string>
    <string name="episode_quality">Quality : </string>
    <string name="episodes">episodes</string>
    <string name="episode_status_wanted">Wanted</string>
    <string name="episode_status_skipped">Skipped</string>
    <string name="episode_status_archieved">Archived</string>
    <string name="episode_status_ignored">Ignored</string>
    <string name="episode_status_set">Set episode status</string>
    <string name="episode_status_set_to">Episode status change</string>
    <string name="coming_next">Next Episode : </string>
    <string name="coming_airs">Airs : </string>
    <string name="coming_air_date">Air date : </string>
    <string name="queueitem_name">Name</string>
    <string name="queueitem_processing">Processing</string>
    <string name="queueitem_category">Category</string>
    <string name="queueitem_priority">Priority</string>
    <string name="movie_poster">Poster</string>
    <string name="movie_status">Status: </string>
    <string name="movie_rating">Rating: </string>
    <string name="movie_release">Released: </string>
    <string name="movie_plot">Plot: </string>
    <string name="movie_profile">Profile: </string>
    <string name="movie_genres">Genres: </string>
    <string name="movie_runtime">Runtime: </string>
    <string name="movie_imdb_url_summary">Open the IMDB page of this movie</string>
    <string name="movie_imdb_url">IMDB Page</string>
    <string name="movie_available_files_summary">View the files related to this movie</string>
    <string name="movie_available_files">Available files</string>
    <string name="movie_readd_summary">Set movie to be re-dowloaded</string>
    <string name="movie_readd">Re-add movie</string>
    <string name="movie_info_change_summary">Change movie information, like title and quality</string>
    <string name="movie_info_change">Change information</string>
    <string name="movie_remove_summary">Remove the movie from Couchpotato</string>
    <string name="movie_remove">Remove</string>
    <string name="movie_download_best_summary">Dowload the best release for this movie</string>
    <string name="movie_download_best">Download best</string>
    <string name="movie_pick_release_summary">Movie Releases</string>
    <string name="movie_pick_release">Movie Releases</string>
    <string name="movie_mark_done_summary">Movie Releases</string>
    <string name="movie_mark_done">Movie Releases</string>
</resources>