<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fillViewport="true" >

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="4dip"
            android:paddingRight="4dip" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:singleLine="true"
                android:text="@string/queueitem_name" />

            <EditText
                android:id="@+id/download_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dip"
                android:singleLine="true"
                android:inputType="textUri"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:singleLine="true"
                android:text="@string/queueitem_processing" />

            <Spinner
                android:id="@+id/download_processing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginTop="6dip"
                android:spinnerMode="dropdown" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:singleLine="true"
                android:text="@string/queueitem_priority" />

            <Spinner
                android:id="@+id/download_priority"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginTop="6dip"
                android:spinnerMode="dropdown" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:singleLine="true"
                android:text="@string/queueitem_category" />

            <Spinner
                android:id="@+id/download_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginTop="4dip"
                android:spinnerMode="dropdown" />
        </LinearLayout>
    </ScrollView>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="0dp"
        android:background="?android:attr/dividerVertical" />

</LinearLayout>